--- a/p/entry.html
+++ b/p/entry.html
@@ -12,13 +12,13 @@
         <!-- Apple... Favico???? -->
         <link rel="apple-touch-icon" href="../assets/img/apple-touch-icon.png">
         <!-- Default Global Scripts -->
-        <script src="js/scripts.js" type="text/javascript"></script>
+        <script src="../js/scripts.js" type="text/javascript"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="canonical" href="http://html5-templates.com/" />
         <!-- Style Sheets -->
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/wiki.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js" type="text/javascript"></script>
+        <script src="../js/vendor/modernizr-2.8.3.min.js" type="text/javascript"></script>
         <script>
             var Refs = [
                 
@@ -466,6 +466,6 @@
         </script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/script.js"></script>
+        <script src="../js/script.js"></script>
     </body>
 </html>
